Fix bug - svg in css not showing

--- a/web/src/scss/index.scss
+++ b/web/src/scss/index.scss
@@ -240,20 +240,23 @@
     }
   }
   &::after {
-    content: url('data:image/svg+xml,%3Csvg height="3.5em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"%3E%3Cpath d="M224 273L88 409c-9 9-24 9-34 0l-22-23c-10-9-10-24 0-34l96-96-96-96c-10-10-10-25 0-34l22-23c10-9 25-9 34 0l136 136c10 9 10 25 0 34zm192-34L280 103c-9-9-24-9-34 0l-22 23c-10 9-10 24 0 33l96 97-96 96c-10 10-10 25 0 34l22 23c10 9 25 9 34 0l136-136c10-9 10-25 0-34z" fill="%238c8c8c"/%3E%3C/svg%3E');
+    content: url('data:image/svg+xml,%3Csvg height="3.5em" width="4.4em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"%3E%3Cpath d="M224 273L88 409c-9 9-24 9-34 0l-22-23c-10-9-10-24 0-34l96-96-96-96c-10-10-10-25 0-34l22-23c10-9 25-9 34 0l136 136c10 9 10 25 0 34zm192-34L280 103c-9-9-24-9-34 0l-22 23c-10 9-10 24 0 33l96 97-96 96c-10 10-10 25 0 34l22 23c10 9 25 9 34 0l136-136c10-9 10-25 0-34z" fill="%238c8c8c"/%3E%3C/svg%3E');
     position: absolute;
     transition: transform 0.25s;
-    height: 3.5em;
+    // height: 3.5em;
+    // width: 4.4em;
     pointer-events: none;
     @include b.mq(md) {
-      content: url('data:image/svg+xml,%3Csvg height="3em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"%3E%3Cpath d="M224 273L88 409c-9 9-24 9-34 0l-22-23c-10-9-10-24 0-34l96-96-96-96c-10-10-10-25 0-34l22-23c10-9 25-9 34 0l136 136c10 9 10 25 0 34zm192-34L280 103c-9-9-24-9-34 0l-22 23c-10 9-10 24 0 33l96 97-96 96c-10 10-10 25 0 34l22 23c10 9 25 9 34 0l136-136c10-9 10-25 0-34z" fill="%238c8c8c"/%3E%3C/svg%3E');
+      content: url('data:image/svg+xml,%3Csvg height="3em" width="3.7em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"%3E%3Cpath d="M224 273L88 409c-9 9-24 9-34 0l-22-23c-10-9-10-24 0-34l96-96-96-96c-10-10-10-25 0-34l22-23c10-9 25-9 34 0l136 136c10 9 10 25 0 34zm192-34L280 103c-9-9-24-9-34 0l-22 23c-10 9-10 24 0 33l96 97-96 96c-10 10-10 25 0 34l22 23c10 9 25 9 34 0l136-136c10-9 10-25 0-34z" fill="%238c8c8c"/%3E%3C/svg%3E');
       top: 0.6rem;
-      height: 3em;
+      // height: 3em;
+      // width: 3.7em;
     }
     @include b.mq(sm) {
-      content: url('data:image/svg+xml,%3Csvg height="2em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"%3E%3Cpath d="M224 273L88 409c-9 9-24 9-34 0l-22-23c-10-9-10-24 0-34l96-96-96-96c-10-10-10-25 0-34l22-23c10-9 25-9 34 0l136 136c10 9 10 25 0 34zm192-34L280 103c-9-9-24-9-34 0l-22 23c-10 9-10 24 0 33l96 97-96 96c-10 10-10 25 0 34l22 23c10 9 25 9 34 0l136-136c10-9 10-25 0-34z" fill="%238c8c8c"/%3E%3C/svg%3E');
+      content: url('data:image/svg+xml,%3Csvg height="2em" width="2.5m" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"%3E%3Cpath d="M224 273L88 409c-9 9-24 9-34 0l-22-23c-10-9-10-24 0-34l96-96-96-96c-10-10-10-25 0-34l22-23c10-9 25-9 34 0l136 136c10 9 10 25 0 34zm192-34L280 103c-9-9-24-9-34 0l-22 23c-10 9-10 24 0 33l96 97-96 96c-10 10-10 25 0 34l22 23c10 9 25 9 34 0l136-136c10-9 10-25 0-34z" fill="%238c8c8c"/%3E%3C/svg%3E');
       top: 0.3rem;
-      height: 2em;
+      // height: 2em;
+      // width: 2.5em;
     }
   }
   &:hover,
